kubernetes/ingress/deploy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service_test_pod
  template:
    metadata:
      labels:
        app: service_test_pod
    spec:
      containers:
        - name: simple-http
          image: python:2.7
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash"]
          args:
            - "-c"
            - |
              echo '<p>Hello from $(hostname)</p>' > index.html
              python -m SimpleHTTPServer 8080
          ports:
            - name: http
              containerPort: 8080
