kubernetes/ingress/service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-test
spec:
  selector:
    app: service_test_pod  # ✅ 들여쓰기 수정
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
