kubernetes/ingress/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "ingress.test.com"
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: service-test
                port:
                  number: 80
